FIX container overflow

--- a/src/sass/_utilities.scss
+++ b/src/sass/_utilities.scss
@@ -5,6 +5,7 @@
     margin: 0 auto;
     padding-left: 15px;
     padding-right: 15px;
+    overflow: hidden;
 }
 
 .header__list a.page {
